fix: footer spacing

--- a/resources/scss/components/_footer.scss
+++ b/resources/scss/components/_footer.scss
@@ -2,14 +2,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	gap: space(1);
+	gap: space(2);
 	height: 32px;
 	margin-bottom: space(1);
 	color: var(--secondary);
 
 	& div {
 		display: flex;
-		gap: space(1);
+		gap: space(1.5);
 	}
 
 	& a, a svg {
